<resources>
    <string name="app_name">WDPMS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="login_text_welcome">xx商家欢迎您</string>
    <string name="login_text_phone">手机号码</string>
    <string name="login_text_password">登录密码</string>
    <string name="login_text_login">登录</string>
    <string name="login_text_register">注册</string>
    <string name="login_text_temporarypassword">临时密码</string>
    <string name="login_text_forgetpassword">忘记密码</string>

    <string name="radiobutton_home_page">首页</string>
    <string name="radiobutton_order">订单</string>
    <string name="radiobutton_set">我的</string>
    <string name="title_activity_fast_registration">FastRegistration</string>

    <string name="register_title">账号注册-密码设置</string>
    <string name="register_text_pwd">密码设置</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <string name="listview_item_button_confirm">确认订单</string>
    <string name="listview_item_button_cancel">取消订单</string>
    <string name="listview_item_button_distributing">配送中</string>
    <string name="listview_item_button_success">配送成功</string>
    <string name="listview_item_button_refuse">拒接订单</string>
    <string name="title_activity_order_detail">OrderDetail</string>

</resources>
