<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/iv_food"
        android:layout_width="120dp"
        android:layout_height="125dp"
        android:padding="10dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/iv_food"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="天价小龙虾"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="￥ 888"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="x 1"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_buyer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="李斯奶奶 "
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="订单号: 8888518"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/order_status"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@drawable/btn_order"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:focusable="false"
        android:layout_below="@+id/iv_food"
        android:textSize="14sp"
        android:text="@string/listview_item_button_confirm"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_status"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_refuse_order"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/btn_order"
            android:focusable="false"
            android:textSize="14sp"
            android:text="@string/listview_item_button_refuse"
            />

        <Button
            android:id="@+id/bt_cancel_order"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/btn_order"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:focusable="false"
            android:textSize="14sp"
            android:text="@string/listview_item_button_cancel"/>


       </LinearLayout>

</RelativeLayout>