<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rlMoreTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/shape_title"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/register_title"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btRegBack"
            style="@style/return_blue" />

        <TextView
            android:id="@+id/tv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30px"
            android:text="关闭"
            android:textColor="@color/blue"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlMoreTitle"
        android:layout_centerHorizontal="true"
        android:background="@color/light_gary" >

        <TextView
            android:id="@+id/tvSetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="49.5dp"
            android:text="密码设置"
            android:textColor="@color/deepgray"
            android:textSize="17sp" />

        <RelativeLayout
            android:id="@+id/rlQuickRegPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSetPwd"
            android:layout_marginTop="80dp"
            android:background="@color/white"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#fff"
                android:padding="5dp" >

                <!-- 登录的手机号 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/login_info"
                        android:textSize="18sp"
                        android:textColor="#000"
                        android:text="@string/login_text_phone" />

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:hint="输入手机号码"
                        android:textColor="#0004FF"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:text="13600001234"
                        android:maxLength="11"
                        android:textSize="18sp"
                        android:singleLine="true"
                        android:background="@null" />
                </LinearLayout>

                <View style="@style/horizontal_line" />
                <!-- 登录的密码 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/login_info"
                        android:textSize="18sp"
                        android:textColor="#000"
                        android:text="@string/login_text_password" />

                    <EditText
                        android:id="@+id/et_pwd"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="20dp"
                        android:hint="输入登录密码"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textSize="18sp"
                        android:text="123456"
                        android:background="@null" />
                </LinearLayout>
            </LinearLayout>

            <!--<TextView-->
                <!--android:id="@+id/tvLoginPwd"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:background="@color/white"-->
                <!--android:padding="8dp"-->
                <!--android:textSize="18sp"-->
                <!--android:text="手机号码" />-->

            <!--<EditText-->
                <!--android:id="@+id/etLoginPwd"-->
                <!--android:layout_width="230dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_toRightOf="@+id/tvLoginPwd"-->
                <!--android:padding="9dp"-->
                <!--android:background="@color/white"-->
                <!--android:singleLine="true"-->
                <!--android:hint="输入手机号码"-->
                <!--android:textCursorDrawable="@null"-->
                <!--android:textSize="16sp"-->
                <!--android:maxLength="16"-->
                <!--android:inputType="textPassword"-->
                <!--android:textColor="#000000" />-->

            <!--<TextView-->
                <!--android:id="@+id/tvDealPwd"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/tvLoginPwd"-->
                <!--android:padding="8dp"-->
                <!--android:background="@drawable/shapenoradiustop"-->
                <!--android:gravity="center_vertical|left"-->
                <!--android:text="登录密码"-->
                <!--android:textSize="18sp"/>-->

            <!--<EditText-->
                <!--android:id="@+id/etDealPwd"-->
                <!--android:layout_width="230dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_below="@+id/tvLoginPwd"-->
                <!--android:layout_toRightOf="@+id/tvDealPwd"-->
                <!--android:background="@drawable/shapenoradiustop"-->
                <!--android:singleLine="true"-->
                <!--android:hint="输入登录密码"-->
                <!--android:inputType="textPassword"-->
                <!--android:textCursorDrawable="@null"-->
                <!--android:textSize="16sp"-->
                <!--android:maxLength="16"-->
                <!--android:textColor="#000000" />-->

            <!--<ImageView-->
                <!--android:id="@+id/ivCircle1"-->
                <!--android:layout_width="20dp"-->
                <!--android:layout_height="20dp"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:src="@mipmap/hide_password"-->
                <!--android:clickable="true" />-->

            <!--<ImageView-->
                <!--android:id="@+id/ivCircle2"-->
                <!--android:layout_width="20dp"-->
                <!--android:layout_height="20dp"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:layout_marginBottom="20px"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:clickable="true"-->
                <!--android:src="@mipmap/hide_password" />-->
        </RelativeLayout>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_below="@+id/tvRemind"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/shapegraybutton"
            android:text="注册"
            android:textColor="@color/deepgray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvRemind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlQuickRegPwd"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:text="密码长度8~16位，数字、字母字符至少包括两种"
            android:textColor="@color/deepgray" />
    </RelativeLayout>

</RelativeLayout>